OpenFeign step 3
