# modules/api-contract/src/main/resources/api-docs.yaml
@@ -3,30 +3,34 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-- url: http://localhost:8080
-  description: Generated server url
+  - url: http://localhost:8081
+    description: Generated server url
 paths:
   /api/v1/users/{id}:
     get:
       tags:
-      - user-rest-controller-v-1
+        - user-rest-controller-v-1
       operationId: getUserById
       parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: string
-          format: uuid
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                oneOf:
-                - $ref: "#/components/schemas/ErrorValidationResponse"
-                - $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/ErrorValidationResponse"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: OK
           content:
@@ -35,15 +39,15 @@ paths:
                 $ref: "#/components/schemas/UserDto"
     put:
       tags:
-      - user-rest-controller-v-1
+        - user-rest-controller-v-1
       operationId: updateUserById
       parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: string
-          format: uuid
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -56,41 +60,23 @@ paths:
           content:
             '*/*':
               schema:
-                oneOf:
-                - $ref: "#/components/schemas/ErrorValidationResponse"
-                - $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/ErrorValidationResponse"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: OK
           content:
             '*/*':
               schema:
                 $ref: "#/components/schemas/UserDto"
-    delete:
-      tags:
-      - user-rest-controller-v-1
-      operationId: deleteUserById
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: string
-          format: uuid
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            '*/*':
-              schema:
-                oneOf:
-                - $ref: "#/components/schemas/ErrorValidationResponse"
-                - $ref: "#/components/schemas/ErrorResponse"
-        "200":
-          description: OK
   /api/v1/users:
     post:
       tags:
-      - user-rest-controller-v-1
+        - user-rest-controller-v-1
       operationId: createUser
       requestBody:
         content:
@@ -104,9 +90,13 @@ paths:
           content:
             '*/*':
               schema:
-                oneOf:
-                - $ref: "#/components/schemas/ErrorValidationResponse"
-                - $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/ErrorValidationResponse"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "201":
           description: Created
           content:
@@ -116,17 +106,21 @@ paths:
   /api/v1/countries:
     get:
       tags:
-      - country-rest-controller-v-1
-      operationId: getUserById_1
+        - country-rest-controller-v-1
+      operationId: getAllCountry
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                oneOf:
-                - $ref: "#/components/schemas/ErrorValidationResponse"
-                - $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/ErrorValidationResponse"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: OK
           content:
@@ -137,7 +131,7 @@ paths:
                   $ref: "#/components/schemas/CountryDto"
     post:
       tags:
-      - country-rest-controller-v-1
+        - country-rest-controller-v-1
       operationId: createCountry
       requestBody:
         content:
@@ -151,21 +145,44 @@ paths:
           content:
             '*/*':
               schema:
-                oneOf:
-                - $ref: "#/components/schemas/ErrorValidationResponse"
-                - $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/ErrorValidationResponse"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "201":
           description: Created
+  /api/v1/users/{id}/compensate:
+    delete:
+      tags:
+        - user-rest-controller-v-1
+      operationId: compensateCreateUser
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "400":
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorValidationResponse"
+        "404":
+          description: Not Found
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "200":
+          description: OK
 components:
   schemas:
-    ErrorResponse:
-      type: object
-      properties:
-        error:
-          type: string
-        status:
-          type: integer
-          format: int32
     ErrorValidationResponse:
       type: object
       properties:
@@ -185,10 +202,15 @@ components:
           type: string
         message:
           type: string
+    ErrorResponse:
+      type: object
+      properties:
+        error:
+          type: string
+        status:
+          type: integer
+          format: int32
     AddressDto:
-      required:
-      - archived
-      - country
       type: object
       properties:
         id:
@@ -203,23 +225,15 @@ components:
         country:
           $ref: "#/components/schemas/CountryDto"
         address:
-          maxLength: 128
-          minLength: 0
           type: string
         zipCode:
-          maxLength: 32
-          minLength: 0
           type: string
         archived:
           type: string
           format: date-time
         city:
-          maxLength: 32
-          minLength: 0
           type: string
         state:
-          maxLength: 32
-          minLength: 0
           type: string
     CountryDto:
       type: object
@@ -228,41 +242,24 @@ components:
           type: integer
           format: int32
         name:
-          maxLength: 32
-          minLength: 0
           type: string
         alpha2:
-          maxLength: 2
-          minLength: 0
           type: string
         alpha3:
-          maxLength: 3
-          minLength: 0
           type: string
         status:
-          maxLength: 32
-          minLength: 0
           type: string
     IndividualDto:
-      required:
-      - archivedAt
-      - verifiedAt
       type: object
       properties:
         id:
           type: string
           format: uuid
         passportNumber:
-          maxLength: 32
-          minLength: 0
           type: string
         phoneNumber:
-          maxLength: 32
-          minLength: 0
           type: string
         email:
-          maxLength: 32
-          minLength: 0
           type: string
         verifiedAt:
           type: string
@@ -271,8 +268,6 @@ components:
           type: string
           format: date-time
         status:
-          maxLength: 32
-          minLength: 0
           type: string
     UserDto:
       type: object
@@ -281,12 +276,8 @@ components:
           type: string
           format: uuid
         secretKey:
-          maxLength: 32
-          minLength: 0
           type: string
         email:
-          maxLength: 1024
-          minLength: 0
           type: string
         created:
           type: string
@@ -295,12 +286,8 @@ components:
           type: string
           format: date-time
         firstName:
-          maxLength: 32
-          minLength: 0
           type: string
         lastName:
-          maxLength: 32
-          minLength: 0
           type: string
         filled:
           type: boolean
